// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CBUInput is neither optional nor required when specified 1`] = `
<Input
  autoCorrect={false}
  label="CBU"
  placeholder="1112222344444444444445"
/>
`;

exports[`CBUInput is optional when specified 1`] = `
<Input
  autoCorrect={false}
  label="CBU"
  placeholder="1112222344444444444445"
  required={false}
/>
`;

exports[`CBUInput renders correctly 1`] = `
<Input
  autoCorrect={false}
  label="CBU"
  placeholder="1112222344444444444445"
/>
`;
